--- a/src/app/explore-container/explore-container.component.scss
+++ b/src/app/explore-container/explore-container.component.scss
@@ -1,27 +1,33 @@
 #container {
   text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  .icon-container {
+    .headset-icon {
+      min-height: 200px;
+      min-width: 30vw;
+      margin: auto;
+    }
+  }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+  strong {
+    font-size: 20px;
+    line-height: 26px;
+  }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+  .items {
+    max-width: 60%;
+    margin: auto;
 
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+    .item {
+      p{
+        &:first-child {
+          margin-bottom: 0;
+          font-weight: bold;
+        }
+        &:last-child {
+          margin-top: 0;
+        }
+      }
+    }
+  }
 }
