agrego para ver videos

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,12 +14,10 @@
   </ion-header>
 
   
-  <ion-button [disabled]="startDisabled"  (click)="startAudio()">
+  <ion-button [disabled]="startDisabled"  (click)="startVideo()">
     play
   </ion-button>
-  <ion-button  [disabled]="stopDisabled" (click)="pauseAudio()">
-    stop
-  </ion-button>
+ 
   <br/>
   <br/>
   <br/>
