--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -19,5 +19,9 @@
     <param name="android-package" value="org.apache.cordova.mediacapture.Capture"/>
   </feature>
 
+  <feature name="StreamingMedia">
+    <param name="android-package" value="com.hutchind.cordova.plugins.streamingmedia.StreamingMedia"/>
+  </feature>
+
   
 </widget>
