--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -19,6 +19,11 @@
     <param name="android-package" value="org.apache.cordova.mediacapture.Capture"/>
   </feature>
 
+  <feature name="StatusBar">
+    <param name="android-package" value="org.apache.cordova.statusbar.StatusBar"/>
+    <param name="onload" value="true"/>
+  </feature>
+
   <feature name="StreamingMedia">
     <param name="android-package" value="com.hutchind.cordova.plugins.streamingmedia.StreamingMedia"/>
   </feature>
