lot of new functionality

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,30 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Seleccioná la canción</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  
-  <ion-button [disabled]="startDisabled"  (click)="startVideo()">
-    play
-  </ion-button>
- 
-  <br/>
-  <br/>
-  <br/>
-  <ion-label color="primary">{{result}}</ion-label>
+  <div class="loader" *ngIf="loading">
+    <ion-spinner></ion-spinner>
+  </div>
+
+  <div class="items" *ngIf="!loading">
+    <ion-item *ngFor="let video of videos" (click)="startVideo(video.ETag)">
+      {{video.Key.split('.')[0].replace(regex, ' ')}}
+    </ion-item>
+  </div>
 
   <div *ngIf="webVideo.show">
-  <h2>Web</h2>
+    <h2>Web</h2>
     <video [crossOrigin]="'anonymous'" [autoplay]="true" [muted]="false">
       <source [src]="webVideo.src" type="video/mp4">
     </video>
