--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Información</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <p>Espero que disfruten de la app tanto como nosotros disfrutamos hacerla!</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <p>Para cualquier duda, comentario, inconveniencia o cualquier otro motivo no dude en contactarse con nosotros.</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <span>Contacto: </span><a href="mailto:experienciabolichera@gmail.com">experienciabolichera@gmail.com</a>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
