--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -2,8 +2,9 @@
 <widget version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
   <access origin="*" />
   
-  <feature name="AudioInputCapture">
-    <param name="android-package" value="com.exelerus.cordova.audioinputcapture.AudioInputCapture"/>
+  <feature name="AdMob">
+    <param name="android-package" value="name.ratson.cordova.admob.AdMob"/>
+    <param name="onload" value="true"/>
   </feature>
 
   <feature name="File">
@@ -13,10 +14,6 @@
 
   <feature name="Media">
     <param name="android-package" value="org.apache.cordova.media.AudioHandler"/>
-  </feature>
-
-  <feature name="Capture">
-    <param name="android-package" value="org.apache.cordova.mediacapture.Capture"/>
   </feature>
 
   <feature name="StatusBar">
