--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -13,6 +13,14 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-list>
+    <ion-item>
+      <ion-icon slot="start" name="moon"></ion-icon>
+      <ion-label>Dark Mode</ion-label>
+      <ion-toggle slot="end" [ngModel]="darkMode" (ionChange)="darkModeToggle()"></ion-toggle>
+    </ion-item>
+  </ion-list>
+
   <ion-grid>
     <ion-row>
       <ion-col>
