fest mode added bug fix

--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,6 +1,6 @@
 <div id="container">
   <div class="icon-container">
-    <ion-icon class="headset-icon" name="headset-outline"></ion-icon>
+    <ion-icon class="headset-icon" [name]="festMode ? 'home-outline' : 'headset-outline'"></ion-icon>
   </div>
   <strong>{{ name }}</strong>
   <div class="items">
